# get-docs

./: README.md  pyproject.toml
src/get_docs/: __init__.py  app.py  docs.py  download.py
