[project]
name = "get-docs"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "aaweaver-actuary", email = "andrewayersweaver+github@gmail.com" }
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "ruff>=0.4.4",
    "ruff-lsp>=0.0.53",
    "streamlit>=1.34.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/get_docs"]
